<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_remove_all"
        android:icon="@drawable/ic_delete_all"
        app:showAsAction="always"
        android:title="@string/cd_note_clean" />
</menu>