<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/notes_login"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:layout_marginBottom="120dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/editTextEmail"
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textInputEmail">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/editTextPassword"
                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="flagNoExtractUi"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxKeepData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/keep_login"
            app:layout_constraintStart_toStartOf="@id/textInputPassword"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword" />


        <Button
            android:id="@+id/buttonSignIn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/do_login"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_check"
            app:iconPadding="2dp"
            app:layout_constraintEnd_toEndOf="@id/textInputPassword"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword"
            tools:visibility="gone" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/contentLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/textInputPassword"
            app:layout_constraintStart_toEndOf="@id/checkBoxKeepData"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>